pushing for remote

--- a/LASDictionaryV2/Base.lproj/Main.storyboard
+++ b/LASDictionaryV2/Base.lproj/Main.storyboard
@@ -105,14 +105,14 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" id="ufZ-IJ-OQf" customClass="SignTableViewCell" customModule="LASDictionaryV2" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="43"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ufZ-IJ-OQf" id="huT-M3-yV7">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zVS-id-RKe">
-                                                    <rect key="frame" x="15" y="11" width="297" height="21.5"/>
+                                                    <rect key="frame" x="15" y="11" width="297" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="297" id="Idc-5P-2KM"/>
                                                     </constraints>
@@ -289,36 +289,116 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Tz-5B-9FL" customClass="QuizVideoView" customModule="LASDictionaryV2" customModuleProvider="target">
-                                <rect key="frame" x="67" y="200.5" width="241" height="128.5"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eze-oh-5uh">
                                 <rect key="frame" x="166.5" y="89" width="42" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zBL-g3-oS0">
+                                <rect key="frame" x="67" y="389" width="240" height="155"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gAQ-fK-tUe">
+                                        <rect key="frame" x="107" y="38" width="46" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gJg-iK-rVE">
+                                        <rect key="frame" x="107" y="76" width="46" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="x/x" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYP-xh-Y5D">
+                                        <rect key="frame" x="109" y="114" width="23" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oo4-oh-A6W">
+                                        <rect key="frame" x="107" y="0.0" width="46" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="155" id="YFV-15-DIE"/>
+                                    <constraint firstAttribute="width" constant="240" id="qcZ-mq-q78"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Tz-5B-9FL" customClass="QuizVideoView" customModule="LASDictionaryV2" customModuleProvider="target">
+                                <rect key="frame" x="16" y="200.5" width="343" height="128.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="eze-oh-5uh" firstAttribute="centerX" secondItem="5Tz-5B-9FL" secondAttribute="centerX" id="9fp-8n-MA9"/>
                             <constraint firstItem="eze-oh-5uh" firstAttribute="top" secondItem="Psc-37-OsJ" secondAttribute="bottom" constant="89" id="AEN-sb-Phx"/>
+                            <constraint firstItem="6uO-nh-sRV" firstAttribute="top" secondItem="zBL-g3-oS0" secondAttribute="bottom" constant="103" id="DTr-6V-zYS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zBL-g3-oS0" secondAttribute="trailing" constant="52" id="K5a-Cq-pfT"/>
+                            <constraint firstItem="zBL-g3-oS0" firstAttribute="top" secondItem="5Tz-5B-9FL" secondAttribute="bottom" constant="60" id="Rtz-NX-wCV"/>
                             <constraint firstItem="eze-oh-5uh" firstAttribute="centerX" secondItem="Okx-iM-uvj" secondAttribute="centerX" id="SuI-v7-dqD"/>
-                            <constraint firstItem="5Tz-5B-9FL" firstAttribute="leading" secondItem="Okx-iM-uvj" secondAttribute="leadingMargin" constant="51" id="kK8-JR-cVK"/>
+                            <constraint firstItem="zBL-g3-oS0" firstAttribute="leading" secondItem="Okx-iM-uvj" secondAttribute="leadingMargin" constant="51" id="f4m-Vj-fDU"/>
+                            <constraint firstItem="5Tz-5B-9FL" firstAttribute="leading" secondItem="Okx-iM-uvj" secondAttribute="leadingMargin" id="kK8-JR-cVK"/>
                             <constraint firstAttribute="bottom" secondItem="5Tz-5B-9FL" secondAttribute="bottom" constant="318" id="rHi-Zu-llZ"/>
                             <constraint firstItem="5Tz-5B-9FL" firstAttribute="top" secondItem="eze-oh-5uh" secondAttribute="bottom" constant="91" id="tp4-79-0Fc"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="1n6-IF-208"/>
                     <connections>
+                        <outlet property="answer0" destination="Oo4-oh-A6W" id="uxC-aA-1gU"/>
+                        <outlet property="answer1" destination="gAQ-fK-tUe" id="BAV-EW-qUp"/>
+                        <outlet property="answer2" destination="gJg-iK-rVE" id="kQt-lS-LSj"/>
+                        <outlet property="progressLabel" destination="mYP-xh-Y5D" id="Q5S-qf-YkO"/>
                         <outlet property="signView" destination="5Tz-5B-9FL" id="0W9-5E-nsw"/>
                         <outlet property="titleLabel" destination="eze-oh-5uh" id="tzN-TO-0Np"/>
+                        <segue destination="ET1-QY-gTg" kind="show" id="oT1-he-bF3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VXy-Zf-03G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3068" y="-3161"/>
+            <point key="canvasLocation" x="3068" y="-3161.4692653673164"/>
+        </scene>
+        <!--Results View Controller-->
+        <scene sceneID="pe6-DQ-Oyy">
+            <objects>
+                <viewController id="ET1-QY-gTg" customClass="ResultsViewController" customModule="LASDictionaryV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JnJ-Eb-RlP"/>
+                        <viewControllerLayoutGuide type="bottom" id="AUA-KL-zYg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9Gh-we-tZn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="You got X/X correct" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEe-AB-VvY">
+                                <rect key="frame" x="112" y="323" width="150" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMC-6g-Nve">
+                                <rect key="frame" x="142" y="147" width="90" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zIW-ZI-ADJ"/>
+                    <connections>
+                        <outlet property="resultsLabel" destination="vEe-AB-VvY" id="Azg-gS-U9w"/>
+                        <outlet property="titleLabel" destination="zMC-6g-Nve" id="o8P-sa-ce4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qB8-2G-REK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3948" y="-3175"/>
         </scene>
         <!--Favorites Table View Controller-->
         <scene sceneID="GJc-8b-MUM">
@@ -330,14 +410,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="favoriteCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteCell" id="DPy-gz-2lt" customClass="FavoritesTableViewCell" customModule="LASDictionaryV2" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="43"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DPy-gz-2lt" id="XqC-xW-7vO">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqR-fo-d4e">
-                                            <rect key="frame" x="28" y="11" width="42" height="21.5"/>
+                                            <rect key="frame" x="28" y="11" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
